# git-o-clock

./: .env.sample  .gitignore  .travis.yml  Cargo.toml  README.md  config.json  git-project-manager.sh  git-repo-manager.sh  grm.ps1  grm.sh
.github/: dependabot.yml
completion_scripts/: grm.bash-completion.sh
migrations/2017-08-31-210424_create_repositories/: down.sql  up.sql
src/: cli.rs  cmd_parser.rs  config.rs  database.rs  db.rs  errors.rs  grm.rs  lib.rs  main.rs  models.rs  repo_manager.rs  schema.rs
src/db/: mod.rs  models.rs  schema.rs
wrapper_scripts/: grm.ps1  grm.sh
