[package]
name = "grm"
version = "0.3.0"
authors = ["Julian Didier (theredfish) <did.julian@gmail.com>"]
edition = "2018"

[dependencies]
glob = "^0.3.0"
diesel = { version = "^1.4.2", features = ["sqlite"] }
diesel_migrations = {version = "^1.4.0", features = ["sqlite"]}
dotenv = "^0.14.1"
libsqlite3-sys = { version = ">=0.8.0, <0.16.0", features = ["min_sqlite_version_3_7_16", "bundled"] }
dunce = "^1.0.0"
clap = "^2.33.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "^1.0.40"